@@ -6,21 +6,21 @@ all:
 	$(MAKE) -C ast
 	$(MAKE) -C elkhound
 	$(MAKE) -C elsa
-	$(MAKE) -C semantic
+	$(MAKE) -C asttools
 
 check:
 	$(MAKE) -C smbase check
 	$(MAKE) -C ast check
 	$(MAKE) -C elkhound check
 	$(MAKE) -C elsa check
-	$(MAKE) -C semantic check
+	$(MAKE) -C asttools check
 
 clean:
 	$(MAKE) -C smbase clean
 	$(MAKE) -C ast clean
 	$(MAKE) -C elkhound clean
 	$(MAKE) -C elsa clean
-	$(MAKE) -C semantic clean
+	$(MAKE) -C asttools clean
 
 # I generate distributions out of cvs, where there are no Makefiles
 distclean:
@@ -28,7 +28,7 @@ distclean:
 	$(MAKE) -C ast -f Makefile.in distclean
 	$(MAKE) -C elkhound -f Makefile.in distclean
 	$(MAKE) -C elsa -f Makefile.in distclean
-	$(MAKE) -C semantic -f Makefile.in distclean
+	$(MAKE) -C asttools -f Makefile.in distclean
 	rm -rf test TODO
 
 doc:
@@ -36,4 +36,4 @@ doc:
 	$(MAKE) -C ast doc
 	$(MAKE) -C elkhound doc
 	$(MAKE) -C elsa doc
-	$(MAKE) -C semantic doc
+	$(MAKE) -C asttools doc
