@@ -1,10 +1,15 @@
-The software in this directory is
+The files 
+    astgen_util.ml ocamlhelp.cc ocamlhelp.h ocsstr.cc ocsstr.h
+in this directory are
+Copyright (c) 2006, Hendrik Tews, all right reserved.
+
+All other software in this directory is
 Copyright (c) 2002, Regents of the University of California
 All rights reserved.
 
-Redistribution and use in source and binary forms, with or without
-modification, are permitted provided that the following conditions are
-met:
+Redistribution and use in source and binary forms of all material
+within this directory, with or without modification, are
+permitted provided that the following conditions are met:
 
     * Redistributions of source code must retain the above copyright
       notice, this list of conditions and the following disclaimer.
