@@ -1,4 +1,7 @@
-// ocamlhelp.cc            see license.txt for copyright and terms of use
+//  Copyright 2006 Hendrik Tews, All rights reserved.                  *
+//  See file license.txt for terms of use                              *
+//**********************************************************************
+
 // implementation of ocamlhelp.h -- ocaml serialization helpers 
 
 
