@@ -1,4 +1,7 @@
-// ocamlhelp.h            see license.txt for copyright and terms of use
+//  Copyright 2006 Hendrik Tews, All rights reserved.                  *
+//  See file license.txt for terms of use                              *
+//**********************************************************************
+
 // ocaml serialization helpers -- included by generated ast code
 
 #ifndef OCAMLHELP_H
